# sml

./: CONTRIBUTING.md  LICENSE  README.md  epistemic_module.py  inference.py  pyproject.toml  types.py
docs/: ARCHITECTURE.md  GLOSSARY.md
sml/: __init__.py  encoder.py  losses.py  memory.py
tests/: test_shapes.py
